[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airbnb-scraper"
version = "1.0.0"
description = "High-performance Airbnb scraper with caching, parallel requests, and rate limiting"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "rabi3laser"}]
keywords = ["airbnb", "scraper", "real-estate", "pricing", "analytics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["httpx[http2]>=0.25.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.urls]
Homepage = "https://github.com/rabi3laser/airbnb-scraper"
Repository = "https://github.com/rabi3laser/airbnb-scraper"

[tool.hatch.build.targets.wheel]
packages = ["src/airbnb_scraper"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
